# openmetadata-mcp-agent

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CodePatterns.md  LICENSE_HEADER.txt  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  task.md
.github/workflows/: auto-assign-reviewer.yml  ci.yml
docs/: api.md  architecture.md  contributing.md  getting-started.md  runbook.md
infrastructure/: Dockerfile  docker-compose.om.yml  docker-compose.yml
scripts/: check_license_headers.py  check_openai_quota.py  generate_bot_jwt.py  load_seed.py  multi_mcp_demo.py  smoke_test.py  start_om.sh  trigger_om_search_reindex.py
seed/: README.md  customer_db.json
src/copilot/: __init__.py
src/copilot/api/: __init__.py  chat.py  governance.py  main.py
src/copilot/clients/: __init__.py  github_mcp.py  om_mcp.py  openai_client.py
src/copilot/config/: __init__.py  settings.py
src/copilot/middleware/: __init__.py  error_envelope.py  rate_limit.py  request_id.py
src/copilot/models/: __init__.py  chat.py  governance_record.py  governance_state.py  mcp_tools.py
src/copilot/observability/: __init__.py  metrics.py  redact.py
src/copilot/services/: __init__.py  agent.py  drift.py  governance_store.py  governance_writeback.py  nl_router.py  prompt_safety.py  session_store.py  sessions.py  similarity.py  tool_audit.py
tests/: conftest.py
tests/architecture/: test_layer_imports.py
tests/security/: test_prompt_injection.py
tests/unit/: test_agent.py  test_chat_confirm.py  test_drift.py  test_generate_bot_jwt.py  test_github_mcp.py  test_governance_api.py  test_governance_store.py  test_load_seed.py  test_mcp_tools.py  test_nl_router.py  test_om_mcp.py  test_seed_data.py  test_sessions.py  test_settings.py  test_similarity.py  test_smoke.py  test_smoke_script.py
ui/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx  vite-env.d.ts
ui/src/styles/: tokens.css
